--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "no-underscore-dangle": 0,
         "no-restricted-globals": 0,
         "linebreak-style": 0,
-        "no-unused-vars": 0
+        "no-unused-vars": 0,
+        "no-return-assign": 0,
     }
 }
